fixed header overlapping scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+.container.flex{
+    flex-direction: column;
+}
+
 img{
     max-width: 1.875rem;
 }
@@ -121,18 +125,20 @@ main{
 }
 
 .navbar span{
-    line-height: 30px;
+    line-height: 1.875rem;
+}
+
+.nav-top{
+    flex-direction: column;
 }
 
 .nav-top li{
-    line-height: 30px;
+    line-height: 1.875rem;
     margin-bottom: 0.5rem;
 }
 
-.nav-bottom ul{
-    flex-direction: column;
-    align-items: center;
-    gap: 0.3rem;
+.nav-playlist{
+    overflow-y: auto;
 }
 
 .navbar .btn{
@@ -146,6 +152,11 @@ main{
     background-color: var(--text-gray);
 }
 
+.nav-bottom ul{
+    flex-direction: column;
+    align-items: center;
+    gap: 0.3rem;
+}
 
 /*! PLAYLIST SECTION */
 
@@ -154,27 +165,27 @@ main{
     height: 100%;
 }
 
+.wrapper{
+    height: 100%;
+    background-color: var(--main-bg);
+    overflow-y: auto;
+}
+
     /*# PLAYLIST SECTION HEADER */
 
     header{
-        position: fixed;
+        position: sticky;
         top: 0;
-        left: 3rem;
-        right: 0;
-        z-index: 1;
         height: 5rem;
         background-color: rgba(0, 0, 0, 0.5);
     }
 
     /*# CONTENT  */
-    
-    .content{
-        padding: 6rem 1rem 1rem 1rem;
-        height: 100%;
-        background-color: var(--main-bg);
-        overflow-y: auto;
-    }
 
+    .content{
+        padding: 1rem;
+    }
+    
     .content ul{
         justify-content: center;
         flex-wrap: wrap;
@@ -183,6 +194,7 @@ main{
     }
 
     .content li{
+        font-size: 0.8rem;
         padding: 0.5rem 1rem;
     }
 
@@ -190,7 +202,8 @@ main{
 
 footer{
     height: 5rem;
-    background-color: var(--footer-bg)
+    background-color: var(--footer-bg);
+    z-index: 1;
 }
 
 
@@ -237,13 +250,7 @@ footer{
         .nav-bottom ul{
           align-items: stretch;
         }
-
-        /*+ HEADER */
-
-        header{
-            left: 20rem;
-        }
-                
+               
     }
 
     /*# Breakpoint 768px */
@@ -266,4 +273,8 @@ footer{
         .flex > .col{
             flex: 0 0 calc(100%/6);
         }
+    }
+
+    .containerb{
+        padding: 1rem;
     }
